--- a/2.2-databases-2/orm_migrations/templates/school/students_list.html
+++ b/2.2-databases-2/orm_migrations/templates/school/students_list.html
@@ -8,6 +8,11 @@
   {% for student in object_list %}
     <li>{{ student.name }} {{ student.group }} <br> Преподаватель: {{ student.teacher.name }} {{ student.teacher.subject }}</li>
   {% endfor %}
+
+
+    {% for teacher in student.teacher.all %}
+<p>{{ teacher.name }}: {{ teacher.subject }}</p>
+{% endfor %}
   </ul>
 </div>
 {% endblock %}
